- Moved some logic price direction to model - Added tests

--- a/app/src/main/res/layout/fragment_order_ticket.xml
+++ b/app/src/main/res/layout/fragment_order_ticket.xml
@@ -172,6 +172,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/default_margin_half"
+        android:enabled="false"
         android:text="@string/title_confirm"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
