--- a/app/src/main/res/layout/fragment_order_ticket.xml
+++ b/app/src/main/res/layout/fragment_order_ticket.xml
@@ -4,12 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginStart="@dimen/default_margin"
-    android:layout_marginTop="@dimen/default_margin"
-    android:layout_marginEnd="@dimen/default_margin">
+    android:background="@color/bg_order">
 
     <TextView
         android:id="@+id/tvTitle"
+        style="@style/Base.TextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
@@ -19,71 +18,91 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Title" />
 
-    <TextView
-        android:id="@+id/tvSell"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/title_price_sell"
-        app:layout_constraintEnd_toStartOf="@+id/tvBuy"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
-
-    <TextView
-        android:id="@+id/tvPriceSell"
+    <LinearLayout
+        android:id="@+id/layoutSell"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/default_margin_half"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/tvSpread"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:orientation="vertical"
+        android:paddingStart="@dimen/default_margin_half"
+        android:paddingEnd="0dp"
+        app:layout_constraintEnd_toStartOf="@+id/layoutBuy"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvSell"
-        tools:text="7,449.79" />
+        app:layout_constraintTop_toBottomOf="@+id/tvTitle">
+
+        <TextView
+            android:id="@+id/tvSell"
+            style="@style/Base.TextView.Sell"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/title_price_sell" />
+
+        <TextView
+            android:id="@+id/tvPriceSell"
+            style="@style/Base.TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/default_margin_half"
+            android:textSize="24sp"
+            tools:text="7,449.79" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layoutBuy"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@color/bg_order_buy"
+        android:orientation="vertical"
+        android:paddingStart="0dp"
+        android:paddingEnd="@dimen/default_margin_half"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/layoutSell"
+        app:layout_constraintTop_toBottomOf="@+id/tvTitle">
+
+        <TextView
+            android:id="@+id/tvBuy"
+            style="@style/Base.TextView.Buy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:text="@string/title_price_buy" />
+
+        <TextView
+            android:id="@+id/tvPriceBuy"
+            style="@style/Base.TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginStart="@dimen/default_margin_half"
+            android:gravity="end"
+            android:textSize="24sp"
+            tools:text="7,450.79" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/tvSpread"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/tvPriceSell"
+        android:textColor="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="@+id/layoutSell"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tvPriceSell"
         tools:text="1.00" />
 
     <TextView
-        android:id="@+id/tvBuy"
+        android:id="@+id/tvDelayed"
+        style="@style/Base.TextView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/title_price_buy"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
-
-    <TextView
-        android:id="@+id/tvPriceBuy"
-        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/default_margin_half"
-        android:gravity="end"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/tvSpread"
-        app:layout_constraintTop_toBottomOf="@+id/tvBuy"
-        tools:text="7,450.79" />
-
-    <TextView
-        android:id="@+id/tvDelayed"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/default_margin_half"
         android:text="@string/title_price_15m"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvPriceSell" />
+        app:layout_constraintTop_toBottomOf="@+id/layoutSell" />
 
     <TextView
         android:id="@+id/tvPriceDelayed"
+        style="@style/Base.TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/default_margin_half"
@@ -93,6 +112,7 @@
 
     <TextView
         android:id="@+id/tvLast"
+        style="@style/Base.TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/default_margin"
@@ -102,6 +122,7 @@
 
     <TextView
         android:id="@+id/tvPriceLast"
+        style="@style/Base.TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/default_margin_half"
@@ -111,6 +132,7 @@
 
     <TextView
         android:id="@+id/tvUnits"
+        style="@style/Base.TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/default_margin"
@@ -121,6 +143,7 @@
 
     <TextView
         android:id="@+id/tvAmount"
+        style="@style/Base.TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/title_amount"
@@ -130,8 +153,10 @@
 
     <EditText
         android:id="@+id/etUnits"
+        style="@style/Base.EditText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/default_margin_half"
         android:layout_marginEnd="@dimen/default_margin_half"
         android:autofillHints="@string/title_amount"
         android:gravity="center"
@@ -144,9 +169,11 @@
 
     <EditText
         android:id="@+id/etValue"
+        style="@style/Base.EditText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/default_margin_half"
+        android:layout_marginEnd="@dimen/default_margin_half"
         android:autofillHints="@string/title_amount"
         android:gravity="center"
         android:hint="@string/title_amount"
@@ -157,22 +184,24 @@
         app:layout_constraintStart_toEndOf="@+id/etUnits"
         app:layout_constraintTop_toBottomOf="@+id/tvAmount" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btnCancel"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/default_margin_half"
         android:layout_marginEnd="@dimen/default_margin_half"
         android:text="@string/title_cancel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnConfirm"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btnConfirm"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/default_margin_half"
-        android:enabled="false"
+        android:layout_marginEnd="@dimen/default_margin_half"
+        android:backgroundTint="@color/bg_btn_buy_selector"
         android:text="@string/title_confirm"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
