--- a/app/src/main/res/layout/fragment_order_ticket.xml
+++ b/app/src/main/res/layout/fragment_order_ticket.xml
@@ -92,7 +92,7 @@
 
     <TextView
         android:id="@+id/tvDelayed"
-        style="@style/Base.TextView"
+        style="@style/Base.TextView.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/default_margin_half"
@@ -102,7 +102,7 @@
 
     <TextView
         android:id="@+id/tvPriceDelayed"
-        style="@style/Base.TextView"
+        style="@style/Base.TextView.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/default_margin_half"
@@ -112,7 +112,7 @@
 
     <TextView
         android:id="@+id/tvLast"
-        style="@style/Base.TextView"
+        style="@style/Base.TextView.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/default_margin"
@@ -122,7 +122,7 @@
 
     <TextView
         android:id="@+id/tvPriceLast"
-        style="@style/Base.TextView"
+        style="@style/Base.TextView.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/default_margin_half"
@@ -132,7 +132,7 @@
 
     <TextView
         android:id="@+id/tvUnits"
-        style="@style/Base.TextView"
+        style="@style/Base.TextView.Buy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/default_margin"
@@ -143,7 +143,7 @@
 
     <TextView
         android:id="@+id/tvAmount"
-        style="@style/Base.TextView"
+        style="@style/Base.TextView.Buy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/title_amount"
@@ -159,6 +159,7 @@
         android:layout_marginStart="@dimen/default_margin_half"
         android:layout_marginEnd="@dimen/default_margin_half"
         android:autofillHints="@string/title_amount"
+        android:background="@drawable/bg_edit_text"
         android:gravity="center"
         android:hint="@string/title_units"
         android:inputType="numberDecimal"
@@ -175,6 +176,7 @@
         android:layout_marginStart="@dimen/default_margin_half"
         android:layout_marginEnd="@dimen/default_margin_half"
         android:autofillHints="@string/title_amount"
+        android:background="@drawable/bg_edit_text"
         android:gravity="center"
         android:hint="@string/title_amount"
         android:inputType="numberDecimal"
