--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="text_color_buy">#0892d0</color>
 
     <color name="bg_order">#111</color>
+    <color name="bg_edit_text">#222</color>
     <color name="bg_order_sell">#f28500</color>
     <color name="bg_order_buy">#0abab5</color>
 </resources>
