--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="default_horizontal_margin">16dp</dimen>
     <dimen name="default_vertical_margin">16dp</dimen>
 
+    <dimen name="edit_text_width_stroke">1dp</dimen>
+    <dimen name="edit_text_radius">4dp</dimen>
 </resources>
