--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,10 @@
         <item name="android:textColor">@android:color/white</item>
     </style>
 
+    <style name="Base.TextView.Small">
+        <item name="android:textSize">12sp</item>
+    </style>
+
     <style name="Base.TextView.Sell">
         <item name="android:textColor">@color/text_color_sell</item>
     </style>
